# mixer

./: WORKSPACE
adapter/: BUILD  inventory.go
adapter/census/: BUILD.bazel  census.go
adapter/census/config/: BUILD.bazel  config.proto
adapter/jaeger/: BUILD.bazel  jaeger.go
adapter/jaeger/config/: BUILD.bazel  config.proto
adapter/sdtrace/: BUILD  sdtrace.go  sdtrace_test.go
adapter/sdtrace/config/: BUILD  config.proto
adapter/stackdriver/: BUILD  stackdriver.go
adapter/stackdriver/trace/: BUILD.bazel  trace.go
docker/: cloudbuild.yaml
pkg/adapter/: metrics.go
template/: BUILD
template/tracespan/: BUILD  span.proto
testdata/config/: census.yaml  stackdriver.yaml
testdata/configroot/scopes/global/: adapters.yml  descriptors.yml
testdata/configroot/scopes/global/subjects/global/: rules.yml
