load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["jaeger.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/jaeger/config:go_default_library",
        "//pkg/adapter:go_default_library",
        "//template/tracespan:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_uber_jaeger_client_go//:go_default_library",
    ],
)
