load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["trace.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/stackdriver/config:go_default_library",
        "//pkg/adapter:go_default_library",
        "//template/tracespan:go_default_library",
        "@org_golang_google_api//cloudtrace/v1:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_api//support/bundler:go_default_library",
        "@org_golang_google_api//transport:go_default_library",
    ],
)
